Added icons and the last searched city will load by default

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                             <div class="card-header" id ="hero-city-name">
                                 City
                             </div>
+                            <div id="hero-city-icon"></div>
                             <div class="card-body">
                                 <p id="hero-temperature">Temperature</p>
                                 <p id="hero-humidity">Humidity</p>
